--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.453.0",
